force-app/main/default/objects/Trigger_Setting__mdt/fields/afterInsert__c.field-meta.xml
<CustomField>
    <fullName>afterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>afterInsert</label>
    <type>Checkbox</type>
</CustomField>