force-app/main/default/objects/Trigger_Setting__mdt/fields/afterUndelete__c.field-meta.xml
<CustomField>
    <fullName>afterUndelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>afterUndelete</label>
    <type>Checkbox</type>
</CustomField>