force-app/main/default/objects/Trigger_Setting__mdt/fields/beforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>beforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>beforeUpdate</label>
    <type>Checkbox</type>
</CustomField>