force-app/main/default/objects/Trigger_Setting__mdt/fields/OldTriggerSetting__c.field-meta.xml
<CustomField>
    <fullName>OldTriggerSetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OldTriggerSetting</label>
    <type>Checkbox</type>
</CustomField>