force-app/main/default/objects/Trigger_Setting__mdt/fields/SObject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Api_Name__c</fullName>
    <label>SObject Api Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>